fixed videolist link component, adjusted commentbox component spacing

--- a/src/components/CommentBox/CommentBox.scss
+++ b/src/components/CommentBox/CommentBox.scss
@@ -23,6 +23,7 @@
   }
   &__container {
     display: flex;
+    padding-bottom: 1rem;
   }
   &__header {
     font-size: 0.8125rem;
@@ -57,7 +58,7 @@
     border: 1px solid #e1e1e1;
     @include tablet {
       width: 70%;
-      height: 40px;
+      height: 2.5rem;
     }
   }
   &__button {
@@ -79,12 +80,11 @@
   }
   &__button__icon {
     position: absolute;
-    // need to fix
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     top: 0;
     left: 0;
-    margin-left: 0.125rem;
     margin-top: 0.3125rem;
+    margin-left: 0.5rem;
   }
 }
