--- a/src/components/PostedComments/PostedComments.scss
+++ b/src/components/PostedComments/PostedComments.scss
@@ -2,7 +2,7 @@
 @use "../../styles/partials/mixins" as *;
 
 .posted {
-  font-size: 13px;
+  font-size: 0.8125rem;
   padding: 0rem 1rem;
   @include small-tablet {
     padding: 0rem 1.5rem;
