--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -11,6 +11,9 @@
   @include desktop {
     padding: 0.5rem 3rem;
   }
+  &__header {
+    padding-left: 1rem;
+  }
   &__container {
     padding: 0rem 1rem;
     max-width: 17.5rem;
@@ -27,13 +30,15 @@
     display: flex;
   }
   h2 {
-    padding-left: 1rem;
     font-size: 0.8125rem;
   }
   h3 {
-    padding-left: 1rem;
     font-size: 0.8125rem;
     font-weight: 100;
+  }
+  a {
+    text-decoration: none;
+    color: inherit;
   }
 }
 .videolist__img__container {
